--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-    <h2>Body Content HTI</h2>
+    <h2>Flask Boierplat | Ready to Use</h2>
 {% endblock content %}
